# BeaglePlay

./: .gitignore  CMakeLists.txt  README.md  TODO.md
App/: CMakeLists.txt  app.cpp  app.hpp  glfw.cpp  glfw.hpp  globals.hpp  main.cpp  ui.cpp  ui.hpp
Core/: CMakeLists.txt  database.cpp  database.hpp  logger.hpp  user.hpp
Database/: docker-compose-database.service  docker-compose.yml  postgresql.md
_cmake/: IMGUI.cmake  PQXX.cmake  Spdlog.cmake  options.cmake
_docs/: beagleplay.md  toolchain.md
